--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.0.0",
-    "firebase": "^5.7.0",
+    "firebase": "^5.9.1",
     "react": "^16.6.3",
     "react-color": "^2.14.1",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.1",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.1",
